@@ -1,3 +1,11 @@
+2011-06-17  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
+	2011-05-23  Richard Guenther  <rguenther@suse.de>
+
+	PR tree-optimization/49115
+	* g++.dg/torture/pr49115.C: New testcase.
+
 2011-06-17  Hans-Peter Nilsson  <hp@axis.com>
 
 	Backport from mainline
